notes can be reviewed,more views added.Finished,kinda.

--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -1,8 +1,11 @@
  <h2 class="page-header">Dashboard</h2>
 <p>Welcome to your dashboard</p>  
 
+<!-- Remember to add the link to edit the notes also. -->
+
 <ul>
 	<li><a href="/users/profile/create">Create a new note</a></li>
 	<li><a href="/users/profile/view">View my notes</a></li>
-	<li><a href="/users/profile/review">Review notes</a></li>
+	<li><a href="/users/profile/reviewed">Notes I have reviewed</a></li>
+	<li><a href="/users/profile/toreview">Notes to review</a></li>
 </ul>
