--- a/views/create.handlebars
+++ b/views/create.handlebars
@@ -24,16 +24,8 @@
     <input type="text" class="form-control" placeholder="Budget" name="budget">
   </div>
    <div class="form-group">
-    <label>Reviewer Username-1</label>
-    <input type="text" class="form-control" placeholder="Reviewer-1" name="reviewer1">
-  </div>
-   <div class="form-group">
-    <label>Reviewer Username-2</label>
-    <input type="text" class="form-control" placeholder="Reviewer-2" name="reviewer2">
-  </div>
-   <div class="form-group">
-    <label>Reviewer Username-3</label>
-    <input type="text" class="form-control" placeholder="Reviewer-3" name="reviewer3">
+    <label>Reviewer email</label>
+    <input type="text" class="form-control" placeholder="Reviewer-email" name="reviewer1">
   </div>
   <button type="submit" class="btn btn-default">Submit</button>
 </form>
