--- a/views/reviewnotes.handlebars
+++ b/views/reviewnotes.handlebars
@@ -1,15 +1,13 @@
 <h2>Review received notes</h2>
 <div class="jumbotron">
 	{{#each notes}}
-		<p>Note-id : {{this._id}}</p>
 		<p>Author : {{this.author.name}}</p>		
 		<p>Subject : {{this.subject}}</p>
 		<p>Purpose : {{this.purpose}}</p>
 		<p>Budget : {{this.budget}}</p>
 		<form method="post" action="/users/profile/review">
 		<div class="form-group">
-    <label>Note-id</label>
-    <input type="text" class="form-control" placeholder="Enter the id given above" name="noteid">
+    <input type="hidden" class="form-control" name="noteid" value="{{this._id}}">
   </div>
    	<div class="form-group">
     <label>Comments</label>
